clipboard: don't replace the playlist menu if it's not changing

https://bugzilla.gnome.org/show_bug.cgi?id=701395